<resources>
    <string name="app_name">YandexImageSearchEngine</string>
    <string name="hint_search">search</string>
    <string name="image">Изображение</string>

    <string name="title_settings">Настройки</string>

    <string name="action_open_origin_image">Открыть оригинал</string>
    <string name="action_open_origin_image_source">Источник</string>
    <string name="action_send">Отправить</string>

    <!-- Error messages -->
    <string name="yandex_bot_error">К сожалению яндекс ограничил доступ к источнику изображения с текущего IP</string>
    <string name="other_images_not_found">Другие изображения не найдены</string>
    <string name="images_load_failed">Не удалось загрузить изображения: </string>
    <string name="image_load_failed">Не удалось загрузить изображение: %s</string>
    
    <!-- Error messages info -->
    <string name="server_invalid_response">Сервер отправил некорректный ответ</string>
    <string name="could_not_find_image_real_source">Не удалось найти реальный источник изображения</string>
    <string name="response_is_not_success">Response code: %1$s</string>
    <string name="server_is_not_responding">Не удалось получить результат от сервера.
        Проверьте подключение к интернету.</string>
    <string name="need_enter_captcha">Требуется ввести капчу</string>
    <string name="unexpected_error">Произошла непредиденная ошибка</string>
    
    <!--File system errors -->
    <string name="selected_image_could_not_read">Не удалось прочитать выбранное изображение.
        Возможно оно было перемещено или удалено</string>

    <!-- Captcha -->
    <string name="captcha">Капча</string>
    <string name="captcha_input_field">Поле ввода для капчи</string>
    <string name="captcha_title">Пожалуйста введите капчу</string>
    <string name="info_for_entering_captcha">Используйте строчные и прописные буквы, знаки препинания. Между словами поставьте пробел.</string>
    <string name="error_message_enter_captcha">Неверно, попробуйте ещё раз!</string>
    <string name="failed_captcha_upload">Не удалось отобразить капчу</string>

    <!-- Image actions -->
    <string name="action_open_in_other_app">Открыть в…</string>
    <string name="action_share">Отправить</string>
    <string name="action_download">Скачать</string>

    <!-- Menu actions -->
    <string name="search_by_image">Поиск по изображению</string>
    <string name="pick_image">Выбрать изображение</string>
    <string name="take_photo">Сделать фото</string>

</resources>