<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/padding_title"
        android:text="@string/captcha_title" />

    <TextView
        android:id="@+id/failed_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        android:text="@string/error_message_enter_captcha"
        android:textColor="@color/color_error_msg_enter_captcha" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_title"
        android:text="@string/info_for_entering_captcha"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/image_captcha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:contentDescription="@string/captcha"
        tools:src="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_field"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:autofillHints="@string/captcha_input_field"
            android:hint="@string/captcha"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:labelFor="@+id/image_captcha" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_send" />

    </LinearLayout>

</LinearLayout>